[package]
name = "uid_store"
description = "Generate random uid strings containing letters, numbers, or base62 values."
license = "MIT"
version = "0.1.6"
edition = "2021"
keywords = ["uid"]
repository = "https://github.com/scripturial/uid_store"
authors = ["Jay Rhoden <hello@scripturial.com>"]
categories = ["data-structures"]

[dependencies]
